# RobotMOOS

./: .gitignore  .project1  README.md
missions/alder/: alder.bhv  alder.moos
missions/tests/New15.02.2021/: .LastOpenedMOOSLogDirectory  launch.sh  navigation1.moos  navigation2.moos  navigation3.moos  shoreside.moos  test1.txt  vehicle1.moos  vehicle2.moos  vehicle3.moos
missions/tests/missions1/: info.txt  mission_test1.mission  mission_test2.mission  mykill  run.sh  shoreside.moos  test.sh  test1.mission  test1.txt  vehicle1.moos
missions/tests/remote1GoToPt/: .LastOpenedMOOSLogDirectory  info.txt  navigation3.moos  shoreside.moos  test1.txt  vehicle2.moos  vehicle3.moos
missions/tests/remote2CrsSpd/: .LastOpenedMOOSLogDirectory  alpha.bhv  info.txt  navigation1.moos  navigation2.moos  shoreside.moos  test1.txt  vehicle1.moos
missions/tests/remote3Joystick/: .LastOpenedMOOSLogDirectory  info.txt  shoreside.moos  test1.txt  vehicle1.moos  vehicle2.moos  vehicle3.moos
src/: CMakeLists.txt
src/lib_behavior_AvoidCollisionUpDown/: BHV_AvoidCollisionUpDown.cpp  BHV_AvoidCollisionUpDown.h  CMakeLists.txt
src/lib_behavior_keepDistanceToBottom/: BHV_KeepDistanceToBottom.cpp  BHV_KeepDistanceToBottom.h  CMakeLists.txt
src/lib_behavior_new_waypoint/: AOF_NewWaypoint.cpp  AOF_NewWaypoint.h  BHV_NewWaypoint.cpp  BHV_NewWaypoint.h  CMakeLists.txt
src/lib_rmsg/: CMakeLists.txt  SearchAreaTask.cpp  SearchAreaTask.h
src/pControlVehicleScanning/: CMakeLists.txt  ControlVehicleScanning.cpp  ControlVehicleScanning.h  ControlVehicleScanning_Info.cpp  ControlVehicleScanning_Info.h  main.cpp  pControlVehicleScanning.moos
src/pDistanceToBottom/: CMakeLists.txt  DistanceToBottom.cpp  DistanceToBottom.h  DistanceToBottom_Info.cpp  DistanceToBottom_Info.h  main.cpp  pDistanceToBottom.moos
src/pGenVehicleState/: CMakeLists.txt  GenVehicleState.cpp  GenVehicleState.h  GenVehicleState_Info.cpp  GenVehicleState_Info.h  main.cpp  pGenVehicleState.moos
src/pJoystickTest/: CMakeLists.txt  JoystickTest.cpp  JoystickTest.h  main.cpp  pJoystickTest.moos
src/pMissionVehicle/: CMakeLists.txt  MissionVehicle.cpp  MissionVehicle.h  MissionVehicle_Info.cpp  MissionVehicle_Info.h  SearchAreaTask.cpp  SearchAreaTask.h  main.cpp  pMissionVehicle.moos
src/pMissionsMgmt/: CMakeLists.txt  MissionsMgmt.cpp  MissionsMgmt.h  MissionsMgmt_Info.cpp  MissionsMgmt_Info.h  alder.bhv  alder.moos  alder1.bhv  main.cpp  pMissionsMgmt.moos  test.txt  test0.mission  test1.mission
src/pMyMarinePID/: CMakeLists.txt  MarinePID.cpp  MarinePID.h  PIDEngine.cpp  PIDEngine.h  main.cpp
src/pMyObstacleMgr/: CMakeLists.txt  MyObstacleManager.cpp  MyObstacleManager.h  MyObstacleManager_Info.cpp  main.cpp
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp  pOdometry.moos
src/pRemote/: CMakeLists.txt  Joystick.cpp  Joystick.h  MsgRemote.cpp  MsgRemote.h  Remote.cpp  Remote.h  Remote_Info.cpp  Remote_Info.h  main.cpp  pRemote.moos
src/pRemote1/: Joystick.cpp  Joystick.h  MsgRemote.cpp  MsgRemote.h  Remote.cpp  Remote.h  Remote_Info.cpp  Remote_Info.h  main.cpp  pRemote.moos
src/pRemoteVehicle/: CMakeLists.txt  MsgRemote.cpp  MsgRemote.h  RemoteVehicle.cpp  RemoteVehicle.h  RemoteVehicle_Info.cpp  RemoteVehicle_Info.h  main.cpp  pRemoteVehicle.moos
src/pSearchArea/: CMakeLists.txt  SearchArea.cpp  SearchArea.h  SearchAreaTask.cpp  SearchAreaTask.h  SearchArea_Info.cpp  SearchArea_Info.h  alder.moos  alder1.moos  main.cpp  pSearchArea.moos
src/pSonar/: CMakeLists.txt  Sonar.cpp  Sonar.h  Sonar_Info.cpp  Sonar_Info.h  main.cpp  pSonar.moos
src/pTworzenieMisji/: CMakeLists.txt  TworzenieMisji (another copy).cpp  TworzenieMisji (copy).cpp  TworzenieMisji gopy2.cpp  TworzenieMisji.cpp  TworzenieMisji.h  TworzenieMisji_Info.cpp  TworzenieMisji_Info.h  main.cpp  pTworzenieMisji.moos
src/pXRelayTest/: Relayer.cpp
